--- a/src/index.css
+++ b/src/index.css
@@ -1,35 +1,117 @@
-body {
-  margin: 0;
-  font-family: 'Jost', sans-serif !important;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-size: 24px !important;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
-
 * {
   box-sizing: border-box;
 }
-
+.flex {
+  display: flex;
+  align-items: center;
+}
+.flex-between {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+}
 .header {
+  padding: 16px 0;
+  font-family: monospace;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.logo {
+  font-weight: 700;
+  font-size: 20px;
+  color: var(--text-main);
+}
+.timezone {
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+  font-weight: 700;
+  color: var(--text-secondary);
+}
+.timezone label {
+  margin-right: 1em;
+  font-weight: 700;
+}
+.main {
+  margin-top: 4em;
   text-align: center;
 }
-.header input {
+.main input {
   width: 100%;
 }
-
-.input-wiht-button {
+.input-group {
   display: flex;
 }
-.input-wiht-button input {
+.input-group input {
   margin-right: 0px;
   border-top-right-radius: 0px;
   border-bottom-right-radius: opx;
 }
-.input-wiht-button button {
+.input-group button {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+}
+button.primary {
+  background-color: #1d4ed8;
+  color: #fff;
+}
+button.primary:hover {
+  background-color: #3b82f6;
+}
+.error {
+  color: #dc2626;
+  font-style: italic;
+  margin: 0;
+  padding: 0.5em 0;
+  text-align: left;
+}
+.details {
+  background-color: var(--background);
+  border-radius: 6px;
+  padding: 1em;
+  margin: 1em 0;
+}
+.datetime {
+  margin: 2em 0;
+}
+.datetime h5 {
+  margin-top: 1em;
+}
+.datetime h5:first-child {
+  margin-top: 0;
+}
+.parts {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.parts > div {
+  font-size: 20px;
+}
+.parts b {
+  display: block;
+}
+.remotetz {
+  display: flex;
+  margin-top: 1em;
+  align-items: center;
+  justify-content: space-between;
+}
+.remotetz h5 {
+  margin: 0;
+}
+.remotetz select {
+  font-size: 12px;
+  font-weight: 700;
+}
+.moreinfo {
+  margin-top: 4em;
+}
+.datetime + .moreinfo {
+  margin-top: 2em;
 }
