--- a/src/water.css
+++ b/src/water.css
@@ -29,10 +29,8 @@ html {
 }
 
 body {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Segoe UI Emoji', 'Apple Color Emoji', 'Noto Color Emoji', sans-serif;
+  font-family: 'Jost', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'Segoe UI Emoji', 'Apple Color Emoji', 'Noto Color Emoji', sans-serif;
   line-height: 1.4;
-  max-width: 800px;
-  margin: 20px auto;
   padding: 0 10px;
   word-wrap: break-word;
   color: #363636;
@@ -40,6 +38,7 @@ body {
   background: #fff;
   background: var(--background-body);
   text-rendering: optimizeLegibility;
+  font-size: 24px;
 }
 
 button {
@@ -89,7 +88,6 @@ textarea {
 
 h1 {
   font-size: 2.2em;
-  margin-top: 0;
 }
 
 h1,
@@ -98,8 +96,10 @@ h3,
 h4,
 h5,
 h6 {
-  margin-bottom: 12px;
-  margin-top: 24px;
+  margin: 0 0 .5em 0;
+}
+p {
+  margin-top: 0;
 }
 
 h1 {
@@ -160,7 +160,6 @@ q::after {
 blockquote {
   border-left: 4px solid #0096bfab;
   border-left: 4px solid var(--focus);
-  margin: 1.5em 0;
   padding: 0.5em 1em;
   font-style: italic;
 }
@@ -168,7 +167,6 @@ blockquote {
 q {
   border-left: 4px solid #0096bfab;
   border-left: 4px solid var(--focus);
-  margin: 1.5em 0;
   padding: 0.5em 1em;
   font-style: italic;
 }
@@ -239,8 +237,6 @@ input {
   background-color: var(--background);
   font-family: inherit;
   font-size: inherit;
-  margin-right: 6px;
-  margin-bottom: 6px;
   padding: 10px;
   border: none;
   border-radius: 6px;
@@ -254,8 +250,6 @@ button {
   background-color: var(--background);
   font-family: inherit;
   font-size: inherit;
-  margin-right: 6px;
-  margin-bottom: 6px;
   padding: 10px;
   border: none;
   border-radius: 6px;
@@ -269,8 +263,6 @@ textarea {
   background-color: var(--background);
   font-family: inherit;
   font-size: inherit;
-  margin-right: 6px;
-  margin-bottom: 6px;
   padding: 10px;
   border: none;
   border-radius: 6px;
@@ -284,8 +276,6 @@ select {
   background-color: var(--background);
   font-family: inherit;
   font-size: inherit;
-  margin-right: 6px;
-  margin-bottom: 6px;
   padding: 10px;
   border: none;
   border-radius: 6px;
@@ -362,7 +352,6 @@ input {
 
 label {
   vertical-align: middle;
-  margin-bottom: 4px;
   display: inline-block;
 }
 
@@ -376,7 +365,6 @@ textarea {
 
 textarea {
   display: block;
-  margin-right: 0;
   box-sizing: border-box;
   resize: vertical;
 }
@@ -468,8 +456,6 @@ fieldset {
   border: 1px #0096bfab solid;
   border: 1px var(--focus) solid;
   border-radius: 6px;
-  margin: 0;
-  margin-bottom: 12px;
   padding: 10px;
 }
 
@@ -479,7 +465,6 @@ legend {
 }
 
 input[type='range'] {
-  margin: 10px 0;
   padding: 10px 0;
   background: transparent;
 }
